<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_recipe_share"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_chat_recipe"
        android:icon="@drawable/chat_bubble"
        android:title="@string/menu_recipe_chat"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more"
        android:title="@string/menu_recipe_more"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="always">
        
        <menu>
            <item
                android:id="@+id/action_edit"
                android:icon="@drawable/ic_edit"
                android:title="@string/menu_recipe_edit"
                app:iconTint="?attr/colorOnSurface" />
                
            <item
                android:id="@+id/action_delete"
                android:icon="@drawable/ic_delete"
                android:title="@string/menu_recipe_delete"
                app:iconTint="?attr/colorOnSurface" />
        </menu>
    </item>
</menu> 
