<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_appearance_title" app:iconSpaceReserved="false">
    <ListPreference
    app:title="@string/settings_theme_title"
    app:iconSpaceReserved="false"
    app:key="theme"
    app:defaultValue="system"
    app:entries="@array/theme_entries"
    app:entryValues="@array/theme_value"
    app:summary="%s"
    app:widgetLayout="@layout/preference_widget_chevron"
    />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_search_recommendations_title" app:iconSpaceReserved="false">


        <SwitchPreference
                android:defaultValue="true"
                android:title="@string/settings_smart_search_title"
                android:key="smart_search_enabled"
                app:iconSpaceReserved="false"/>


    </PreferenceCategory>


</PreferenceScreen>
